# wd14-tagger-server

./: .env.exp  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTICE.md  README.md  main.py  pm2.json  pyproject.toml  requirements.txt  sdk.py
app/: __init__.py  settings.py  values.py
app/infer/: __init__.py  error.py  load.py  setup.py
tests/: test_app.py
